--- a/src/locales/zh_CN.json
+++ b/src/locales/zh_CN.json
@@ -24,7 +24,10 @@
     "clearCurrentTrack": "清空轨道",
     "addEmptyAnimation": "添加空动画",
     "addHiddenAnimation": "添加隐藏",
-    "slot": "插槽"
+    "slot": "插槽",
+    "autoBone": "AutoBone",
+    "physicsConstraints": "物理约束",
+    "disableSlotColor": "禁用插槽颜色"
   },
   "export": {
     "outputFormat": "导出格式",
@@ -36,7 +39,11 @@
     "close": "关闭",
     "export": "导出",
     "rendering": "渲染中",
-    "composing": "合成中"
+    "composing": "合成中",
+    "preRenderCount": "预渲染次数",
+    "preRenderCountTip": "使非硬编码动画衔接更流畅",
+    "keepLastFrame": "保留最后一帧",
+    "keepLastFrameTip": "循环动画不建议保留最后一帧"
   },
   "globalSide": {
     "backgroundColor": "背景色",
