--- a/src/locales/en_US.json
+++ b/src/locales/en_US.json
@@ -43,7 +43,8 @@
     "preRenderCount": "Pre-render Count",
     "preRenderCountTip": "Make the transitions between non-hardcoded animations smoother.",
     "keepLastFrame": "Keep Last Frame",
-    "keepLastFrameTip": "It is not recommended to keep the last frame for looping animations."
+    "keepLastFrameTip": "It is not recommended to keep the last frame for looping animations.",
+    "flip": "Flip"
   },
   "globalSide": {
     "backgroundColor": "BG",
